# ur5-robotiq-ros2-control

./: .gitignore  Commands_old  INTEGRATION_SUMMARY.md  KINESTHETIC_TEACHING_ARCHITECTURE.md  KINESTHETIC_TEACHING_GUIDE.md  KINESTHETIC_TEACHING_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_HOME.md  RVIZ_FIX.md  RVIZ_SNAP_FIX.md  SETUP_COMPLETE.md  SYNTHETIC_DATASET_PROMPT.md  WORKSPACE_ENVIRONMENT.md  WORKSPACE_SETUP_COMPLETE.md  bashrc Backup  convert_parquet_to_mp4.py  fix_dataset.py  generate_dataset.sh  ip_add_info_ur5.txt  launch_isaac_ros2.sh  launch_moveit_nosnap.sh  launch_ur5_nosnap.sh  launch_ur5_robotiq.sh  launch_ur5_robotiq_moveit.sh  run_curobo.sh  run_finetune.sh  run_keyboard_teleop.sh  run_program_executor.sh  run_safety_monitor.sh  run_spacemouse_teleop.sh  run_ur5_controller.sh  run_vr_teleop.sh  spacemouse_test.py  test_rviz_nosnap.sh  ur5_config.py  ur_ws.code-workspace  visualize_dataset_rerun.py
.github/: copilot-instructions.md
gopro_streaming/: PHOTO_CAPTURE_METHODS.md  QUICKSTART.md  README.md  TESTING_SUMMARY.md  capture_photo.py  compare_captures.sh  connect_gopro.py  connect_gopro_old.py  diagnose_gopro.py  native_photo_capture.py  quick_capture.sh  setup_environment.sh  setup_test_env.py  test_complete_workflow.sh  test_connection.sh  test_projections.py  test_stream_formats.py  view_stream.sh  view_stream_advanced.sh  view_stream_raw.sh  view_stream_vlc.sh
gopro_streaming/36p_analysis/: README.md  attempt_process.py  inspect_format.py
gopro_streaming/36p_analysis/output_attempts/: processing_log_20251212_022131.txt  processing_log_20251212_022326.txt
isaac_standalone/: BUGFIX_END_EFFECTOR.txt  DOCUMENTATION_INDEX.txt  FIX_SUMMARY.txt  HTTP_CONTROL.md  HTTP_FEATURE_SUMMARY.txt  HTTP_QUICKSTART.txt  QUICKSTART.md  README.md  START_HERE.md  SUMMARY.txt  SYSTEM_DIAGRAM.txt  run_tests.sh  run_ur5_http.sh  run_ur_robot.sh  setup_env.sh  simple_test.py  test_endeffector_fix.sh  test_flask_server.py  ur10_import.py  ur_from_ros2_urdf.py  ur_robot_advanced.py
isaac_standalone/2F-85/: Robotiq_2F_85_base.usd  Robotiq_2F_85_edit.usd
isaac_standalone/Collected_ur10_bin_stacking_short_suction/: .collect.mapping.json  ur10_bin_stacking_short_suction.usd  ur5_2f_85.usd
isaac_standalone/Collected_ur10_bin_stacking_short_suction/Props/: conveyor.usd
isaac_standalone/Collected_ur10e_robotiq2f-140_ROS/: .collect.mapping.json  ur10e_robotiq2f-140_ROS.usd  ur5_robotiq2f-85.usd  ur5_robotiq2f-85_base.usd
isaac_standalone/Collected_ur5/: .collect.mapping.json  ur5.thumb.usd  ur5.usd  ur5_base.thumb.usd  ur5_physics.thumb.usd  ur5_physics.usd  ur5_robot_schema.usd  ur5_sensor.thumb.usd  ur5_sensor.usd
isaac_standalone/ur10_robotiq_cortex/: GR00T_README.md  __init__.py  mr_overlay.py  simple_ur10_behavior.py  test_configuration.py  text_command.txt  ur10_block_stacking_behavior.py  ur10_robotiq_cortex.py  ur10_robotiq_cortex_extension.py  ur10_ros2_follower_behavior.py  ur10_vla_behavior.py
isaac_standalone/ur10_robotiq_cortex/ref_standalone_code/: flask_server.py  robot_inference_test.py  ur5_http_control.py
isaac_standalone/ur5/: ur5.usd  ur5_2F_85.usd
isaac_standalone/ur5/.thumbs/: ur5.thumb.usd
isaac_standalone/ur5/configuration/: ur5_physics.usd
src/detection_recievers/detection_recievers/: CMakeLists.txt  package.xml
src/detection_recievers/detection_recievers/src/: move_group_reciever.cpp  move_realtime.cpp
src/fruit_harvesting_robot/src/automated_fhr_pipeline/: package.xml  setup.cfg  setup.py
src/fruit_harvesting_robot/src/automated_fhr_pipeline/launch/: active.launch.py  background.launch.py
src/my_robot_config/config/: servo_dependencies.yaml
src/ur5_curobo_control/: package.xml  setup.cfg  setup.py
src/ur5_curobo_control/config/: ur5.urdf  ur5.yml  ur5_existing.yml  ur5_robotiq.urdf  ur5_robotiq.yml
src/ur5_curobo_control/launch/: curobo_control.launch.py  gesture_safety.launch.py  program_executor.launch.py
src/ur5_curobo_control/programs/: inspect_object.prog  move_to_home.prog  (+1 more)
src/ur5_gen_controller/: CMakeLists.txt  package.xml
src/ur5_gen_controller/src/: random_joint_goal.cpp
src/ur5_keyboard_teleop/: CMakeLists.txt  README.md  package.xml
src/ur5_keyboard_teleop/src/: keyboard_teleop_node.cpp
src/ur5_kinesthetic_teaching/: BUGFIX_SERVICE_TYPE.md  CMakeLists.txt  EXPECTED_OUTPUT.md  POSTPROCESSING_IMPLEMENTATION_SUMMARY.md  POSTPROCESSING_QUICKREF.md  POST_PROCESSING_GUIDE.md  README.md  TRAJECTORY_POSTPROCESSING_SUMMARY.md  package.xml  setup.py
src/ur5_kinesthetic_teaching/config/: kinesthetic_teaching.yaml
src/ur5_kinesthetic_teaching/launch/: kinesthetic_teaching.launch.py  player.launch.py  recorder.launch.py
src/ur5_kinesthetic_teaching/scripts/: trajectory_player.py  trajectory_postprocess.py  trajectory_recorder.py  trajectory_visualizer.py
src/ur5_kinesthetic_teaching/ur5_kinesthetic_teaching/: __init__.py
src/ur5_robotiq_description/: CMakeLists.txt  README.md  package.xml
src/ur5_robotiq_description/launch/: ur5_robotiq.launch.py
src/ur5_robotiq_description/rviz/: view_robot.rviz
src/ur5_robotiq_description/scripts/: gripper_joint_state_publisher.py
src/ur5_robotiq_description/srdf/: ur5_robotiq.srdf.xacro
src/ur5_robotiq_description/urdf/: robotiq_2f85_original.urdf.xacro  ur5_robotiq.urdf.xacro
src/ur5_spacemouse_teleop/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/ur5_teleop/: package.xml  setup.cfg  setup.py
src/ur5_teleop_msgs/: CMakeLists.txt  package.xml
src/ur5_vr_teleop/: QUICKSTART.md  README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/ur5_vr_teleop/ur5_vr_teleop/: vr_teleop_node.py
src/ur5_workspace_description/: README.md  package.xml  setup.cfg  setup.py
src/ur5_workspace_description/launch/: workspace_collision_objects.launch.py  workspace_environment.launch.py  workspace_markers.launch.py
src/ur5_workspace_description/scripts/: test_workspace.py  workspace_layout.py
src/ur5_workspace_description/ur5_workspace_description/: workspace_collision_objects.py  workspace_markers.py
(+57 files in other folders)
