<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_gen_controller</name>
  <version>0.0.1</version>
  <description>Sample MoveIt-based controller that sends the UR5 to a random joint-space target.</description>
  <maintainer email="usman.asad@ceme.nust.edu.pk">usmanasad88</maintainer>
  <author email="usman.asad@ceme.nust.edu.pk">usmanasad88</author>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ur5_teleop_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
