<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_keyboard_teleop</name>
  <version>0.0.1</version>
  <description>Keyboard teleoperation for UR5 robot using pose deltas</description>
  <maintainer email="usman.asad@ceme.nust.edu.pk">usmanasad88</maintainer>
  <author email="usman.asad@ceme.nust.edu.pk">usmanasad88</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ur5_teleop_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
