<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_vr_teleop</name>
  <version>0.0.1</version>
  <description>HTC Vive VR teleoperation for UR5 robot using pose deltas</description>
  <maintainer email="usman.asad@ceme.nust.edu.pk">usmanasad88</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>ur5_teleop_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
